2021-01-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Do not preset blending cache.

	* graph/gblender.c (gblender_init, gblender_use_channels):
	Use `gblender_clear' instead of...
	(gblender_reset): Removed.

2021-01-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Use faster Set/GetWindowLongPtr.

	* graph/win32/grwin32.c (Message_Process): s/SetProp/SetWindowLongPtr/
	and s/GetProp/GetWindowLongPtr/ essentially.
	(gr_win32_device_init, gr_win32_device_done): Get rid of `ourAtom'.

2021-01-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Use top-down DIBs.

	* graph/win32/grwin32.c (Message_Process): Tweak WM_PAINT.
	(gr_win32_surface_{init,resize}): Set negative `biHeight'.

2021-01-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/win32/grwin32.c (gr_win32_surface_init): Clean up.

2021-01-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Improve driver.

	* graph/win32/grwin32.c (gr_win32_surface_refresh_rectangle):
	Explicitly UpdateWindow to avoid delays and minor clean-up.
	(gr_win32_surface_listen_event): Minor clean-up.

2020-08-24  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Add better usage section.

	* src/ftsdf.c (usage): New function.
	(main): Use it.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	Add `ftsdf` to the build system.

	* Makefile (EXES): Add `ftsdf`.
	Add compile and link rules for `ftsdf`.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[graph] Add function to pass custom color for writing headers.

	* graph/grfont.h, graph/grfont.c (grGotobitmapColor): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Add main function.

	* src/ftsdf.c (main): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Draw SDF to display.

	* src/ftsdf.c (clamp, smoothstep, draw): New function.

2020-08-22  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Handle window events.

	* src/ftsdf.c (Process_Event): New function.
